--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
                     <h2 class="header__content-title">Живая музыка  каждый вечер</h2>
                   </div>
                   <div class="carousel-item">
-                    <img src="img/header-content.png" class="d-block w-100 header__content-img" alt="">
+                    <img src="img/44522670_10156905003153713_6550809949516070912_o.jpg" class="d-block w-100 header__content-img" alt="">
                     <h2 class="header__content-title">Приятная обстановка</h2>
                   </div>
                   <div class="carousel-item">
-                    <img src="img/header-content.png" class="d-block w-100 header__content-img" alt="">
+                    <img src="img/peter-sarstedt--11556464-.jpg" class="d-block w-100 header__content-img" alt="">
                     <h2 class="header__content-title">Отличная атмосфера</h2>
                   </div>
                 </div>
