--- a/index.html
+++ b/index.html
@@ -90,17 +90,17 @@
                 </div>
                 <div class="block__two-item d-flex flex-column justify-content-center align-items-center">
                     <img src="img/item-2.png" alt="" class="two__item-img">
-                    <h2 class="two__item-title">Jazzirama</h2>
+                    <h2 class="two__item-title">Under Influence</h2>
                     <a href="#!" class="two__item-btn">Подробнее</a>
                 </div>
                 <div class="block__two-item d-flex flex-column justify-content-center align-items-center">
                     <img src="img/item-3.png" alt="" class="two__item-img">
-                    <h2 class="two__item-title">Jazzirama</h2>
+                    <h2 class="two__item-title">Саидмурат Муратов</h2>
                     <a href="#!" class="two__item-btn">Подробнее</a>
                 </div>
                 <div class="block__two-item d-flex flex-column justify-content-center align-items-center">
                     <img src="img/item-4.png" alt="" class="two__item-img">
-                    <h2 class="two__item-title">Jazzirama</h2>
+                    <h2 class="two__item-title">“В джазе только дедушки”</h2>
                     <a href="#!" class="two__item-btn">Подробнее</a>
                 </div>
             </div>
